--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -262,3 +262,27 @@ slider.round:before {
     }
 }
 
+.logo {
+    display: flex;
+    justify-content: flex-start;
+    align-items: ;
+    margin: 1rem auto;
+  }
+  
+  .logo-img {
+    width: 80px;
+    height: 80px;
+    object-fit: contain;
+    max-width: 100%;
+    transform: translate(-35px, .5px) scale(2.5); /* Moved left by -30px */
+    margin: 0 auto;
+  }
+  
+  @media (min-width: 768px) {
+    .logo-img {
+        width: 100px;
+        height: 100px;
+        transform: translate(-35px, .5px) scale(2.5); /* Moved left by -40px */
+    }
+  }
+
