--- a/templates/login.html
+++ b/templates/login.html
@@ -15,9 +15,14 @@
           <!-- Sign-In Form -->
           <form autocomplete="off" class="sign-in-form" method="POST">
             <div class="logo">
-              <img src="{{ url_for('static', filename='images/logo.svg') }}" 
-                   alt="Logo" 
-                   class="logo-img">
+              <span class="bs-icon-sm d-flex justify-content-center align-items-center me-3">
+                <img src="{{ url_for('static', filename='images/LGO.png') }}" 
+                     alt="Logo" 
+                     width="80" 
+                     height="80" 
+                     style="filter: invert(1); margin-right: 15px; border-radius: 75%;">
+              </span>
+              <h4>SWIFT STOCK</h4>
             </div>
 
             <div class="heading">
