--- a/templates/portfolios.html
+++ b/templates/portfolios.html
@@ -14,10 +14,10 @@
         <a class="navbar-brand d-flex align-items-center" href="{{ url_for('home') }}">
           <span class="bs-icon-sm d-flex justify-content-center align-items-center me-3">
             <img src="{{ url_for('static', filename='images/logo.svg') }}" 
-                 alt="Logo" 
-                 width="80" 
-                 height="80" 
-                 style="filter: invert(1); margin-right: 15px; border-radius: 75%;">
+            alt="Logo" 
+            class="logo-img"
+            style="filter: invert(1) brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(100%) contrast(100%);">
+                 
         </span>
           
           <!-- Removed Real-Time Stock Price Analysis name -->
