--- a/templates/spiaalatest.html
+++ b/templates/spiaalatest.html
@@ -52,7 +52,9 @@
         <button type="submit" name="timeframe" value="1M" class="btn btn-secondary btn-sm" style="border: 1px solid #ccc; height: 30px;">1M</button>
         <button type="submit" name="timeframe" value="1Y" class="btn btn-secondary btn-sm" style="border: 1px solid #ccc; height: 30px;">1Y</button>
         <button type="submit" name="timeframe" value="5Y" class="btn btn-secondary btn-sm" style="border: 1px solid #ccc; height: 30px;">5Y</button>
-        <button id="monitorButton" class="btn btn-secondary btn-sm ms-2" onclick="toggleMonitorStock(event)" style="border: 1px solid #ccc; height: 30px; width: auto; white-space: nowrap;">Monitor This Stock</button>
+        <button type="button" id="monitorButton" class="btn {{ 'btn-success' if is_monitored else 'btn-secondary' }} btn-sm ms-2" onclick="toggleMonitorStock(event)" style="border: 1px solid #ccc; height: 30px; width: auto; white-space: nowrap;"></button>
+          {{ 'Monitoring This Stock' if is_monitored else 'Monitor This Stock' }}
+        </button>
       </div>
     </div>
   </form>
@@ -89,15 +91,35 @@
     function toggleMonitorStock(event) {
       event.preventDefault();
       const button = document.getElementById('monitorButton');
-      if (button.textContent === 'Monitor This Stock') {
-        button.textContent = 'Monitoring This Stock';
-        button.classList.remove('btn-secondary');
-        button.classList.add('btn-success');
-      } else {
-        button.textContent = 'Monitor This Stock';
-        button.classList.remove('btn-success');
-        button.classList.add('btn-secondary');
-      }
+      const symbol = "{{ symbol }}";
+      
+      formData = new FormData();
+      formData.append('symbol', symbol);
+
+      fetch('/toggle_monitor', {
+        method: 'POST',
+        body: formData
+      })
+      .then(response => response.json())
+      .then(data => {
+        if (data.success) {
+          if (button.textContent === 'Monitor This Stock') {
+            button.textContent = 'Monitoring This Stock';
+            button.classList.remove('btn-secondary');
+            button.classList.add('btn-success');
+          } else {
+            button.textContent = 'Monitor This Stock';
+            button.classList.remove('btn-success');
+            button.classList.add('btn-secondary');
+          }
+        } else {
+          alert(data.message);
+        }
+      })
+      .catch(error => {
+        console.error('Error:', error);
+        alert("An error occurred while toggling the monitor status.");
+      });
     }
   </script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
