--- a/templates/login.html
+++ b/templates/login.html
@@ -14,11 +14,11 @@
         <div class="forms-wrap">
           <!-- Sign-In Form -->
           <form autocomplete="off" class="sign-in-form" method="POST">
-            <div class="logo" style="margin: 0;">
+            <div class="logo" style="display: flex; justify-content: center;">
               <img src="{{ url_for('static', filename='images/logo.svg') }}" 
                    alt="Logo" 
                    class="logo-img"
-                   style=" border-radius: 75%;">
+                   style=" border-radius: 75%; margin: 0; height: 30px; width: 30px;">
               
             </div>
 
