--- a/templates/spiaalatest.html
+++ b/templates/spiaalatest.html
@@ -73,12 +73,19 @@
               <li class="list-group-item d-flex justify-content-between"><span>MACD (Moving Average Convergence Divergence):</span><span>{{data[6]}}</span></li>
               <li class="list-group-item d-flex justify-content-between"><span>RSI (Relative Strength Index):</span><span>{{data[7]}}</span></li>
               <li class="list-group-item"><strong>Volatility and Risk Indicators</strong></li>
-              <li class="list-group-item d-flex justify-content-between"><span>Bollinger Bands:</span><span>{{data[8]}}</span></li>
-              <li class="list-group-item d-flex justify-content-between"><span>Volume Analysis:</span><span>{{data[9]}}</span></li>
-              <li class="list-group-item"><strong>Valuation Metrics</strong></li>
-              <li class="list-group-item d-flex justify-content-between"><span>P/E Ratio (Price-to-Earnings Ratio):</span><span>{{data[10]}}</span></li>
+              <li class="list-group-item d-flex justify-content-between"><span>Bollinger Bands:</span><span>{{data[8]}}</span>
+              <button type="button" id="bbtoggleArrowsButton" class="btn btn-secondary btn-sm ms-2" style="border: 1px solid #ccc; height: 30px; width: auto; white-space: nowrap;">
+                Click Here
+              </button></li>
+              <li class="list-group-item d-flex justify-content-between"><span>Volume Analysis:</span><span>{{data[9]}}</span>
+              <button type="button" id="vaToggleArrowsButton" class="btn btn-secondary btn-sm ms-2" style="border: 1px solid #ccc; height: 30px; width: auto; white-space: nowrap;">
+                Click Here
+              </button></li>
               <li class="list-group-item"><strong>Technical Support and Resistance</strong></li>
-              <li class="list-group-item d-flex justify-content-between"><span>Support and Resistance:</span><span>{{data[11]}}</span></li>
+              <li class="list-group-item d-flex justify-content-between"><span>Support and Resistance:</span><span>{{data[11]}}</span>
+              <button type="button" id="srToggleArrowsButton" class="btn btn-secondary btn-sm ms-2" style="border: 1px solid #ccc; height: 30px; width: auto; white-space: nowrap;">
+                Click Here
+              </button></li>
             </ul>
           </div>
         </div>
@@ -139,6 +146,7 @@
         monitorButton.className = savedClass;
       }
     });
+
   </script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script>
