--- a/templates/login.html
+++ b/templates/login.html
@@ -127,7 +127,7 @@
           <div class="images-wrapper">
             <img src="{{ url_for('static', filename='images/rts.png') }}" class="image img-1 show" alt="Real-Time Stock Price Analyzer" />
             <img src="{{ url_for('static', filename='images/datas.jpeg') }}" class="image img-2" alt="Data Structure" />
-            <img src="{{ url_for('static', filename='images/mt.png') }}" class="image img-3" alt="Group three" />
+            <img src="{{ url_for('static', filename='images/member.png') }}" class="image img-3" alt="Group three" />
           </div>
 
           <div class="text-slider">
