--- a/templates/forgot.html
+++ b/templates/forgot.html
@@ -59,8 +59,8 @@
         <div class="carousel">
           <div class="images-wrapper">
             <img src="{{ url_for('static', filename='images/rts.png') }}" class="image img-1 show" alt="" />
-            <img src="#" class="image img-2" alt="" />
-            <img src="{{ url_for('static', filename='images/image3.png') }}" class="image img-3" alt="" />
+            <img src="{{ url_for('static', filename='images/datas.jpeg') }}" class="image img-2" alt="Data Structure" />
+            <img src="{{ url_for('static', filename='images/member.png') }}" class="image img-3" alt="" />
           </div>
 
           <div class="text-slider">
